--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    tester test
+<p>Web page is vulnerable to clickjacking if the iframe is populated with the target
+page!</p>
+<iframe src="URL_OF_TARGET_PAGE" width="500" height="500"></iframe>
 </body>
 </html>
