--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
 <p>Web page is vulnerable to clickjacking if the iframe is populated with the target
 page!</p>
-<iframe src="http://www.tsn.ca" width="500" height="500"></iframe>
+<iframe src="http://www.msn.com" width="500" height="500"></iframe>
 </body>
 </html>
