--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my test page</title>
 </head>
-
 <body>
-<p>Web page is vulnerable to clickjacking if the iframe is populated with the target
-page!</p>
-<iframe src="http://www.msn.com" width="500" height="500"></iframe>
+    <article>test</article>
 </body>
 </html>
