--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>my test page</title>
 </head>
 <body>
-    <article>test</article>
+    <article>Despite its long and intimidating name, IDOR is easy to understand; it’s
+        essentially a missing access control. IDORs happen when users can access
+        resources that do not belong to them by directly referencing the object ID,
+        object number, or filename.</article>
 </body>
 </html>
