--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <aside id="featured" class="body"><article>
   <figure>
-    <img src="images/temp/sm-logo.gif" alt="Smashing Magazine" />
+    <p>image</p>
   </figure>
   <hgroup>
 
