--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
       <!-- Heading -->
       <div class="accordion__header">
           <!-- The toggle icon -->
-          <div class="accordion__toggle">...</div>
+          <div class="accordion__toggle">test1</div>
 
           <!-- The title -->
           <div class="accordion__title">
-              ...
+              test2
           </div>
       </div>
 
       <!-- The content -->
       <div class="accordion__content">
-          ...
+          test3
       </div>
   </div>
 
