--- a/index.html
+++ b/index.html
@@ -16,30 +16,6 @@
   <link rel="stylesheet" type="text/css" media="all" href="css/ie6.css"/><![endif]-->
 </head>
 
-<!-- Container -->
-<div class="accordion">
-  <!-- Each accordion item -->
-  <div class="accordion__item">
-      <!-- Heading -->
-      <div class="accordion__header">
-          <!-- The toggle icon -->
-          <div class="accordion__toggle">test1</div>
-
-          <!-- The title -->
-          <div class="accordion__title">
-              test2
-          </div>
-      </div>
-
-      <!-- The content -->
-      <div class="accordion__content">
-          test3
-      </div>
-  </div>
-
-  <!-- Repeat other item -->
-  test4
+<div class="container">
+  huge test here
 </div>
-
-</html>
-
