--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" type="text/css" media="all" href="css/ie6.css"/><![endif]-->
 </head>
 
-<div class="container">
-  huge test here
-</div>
+<body>
+<h1>just a test i guess</h1>
+
+</body>
