--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
-<h1>just a test i guess</h1>
+
+  <p>
+    The other way to specify the size of an element is to apply width and height
+dimensions to the entire visible box, including the padding and border.
+Because this is not the default browser behavior, you need to explicitly set
+box-sizing: border-box in the style sheet.
+  </p>
+
+  
 
 </body>
