--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <main align="center">
+  <main>
     The other way to specify the size of an element is to apply width and height
 dimensions to the entire visible box, including the padding and border.
 Because this is not the default browser behavior, you need to explicitly set
