--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 <body>
 
+  <ul>
+    <li>about</li>
+    <li>blog</li>
+    <li>contact</li>
+  </ul>
+  
+  
   <p>
     The other way to specify the size of an element is to apply width and height
 dimensions to the entire visible box, including the padding and border.
