--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
 <body>
 
+<div id="nav">   
   <ul>
     <li>about</li>
     <li>blog</li>
     <li>contact</li>
   </ul>
-  
+  </div>
   
   <p>
     The other way to specify the size of an element is to apply width and height
