--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
     The other way to specify the size of an element is to apply width and height
 dimensions to the entire visible box, including the padding and border.
 Because this is not the default browser behavior, you need to explicitly set
-box-sizing: border-box in the style sheet.
-<br>
+box-sizing: border-box in the style sheet.<br>
 The other way to specify the size of an element is to apply width and height
-  dimensions to the entire visible box, including the padding and border.
-  Because this is not the default browser behavior, you need to explicitly set
-  box-sizing: border-box in the style sheet.
-  <br>
-  The other way to specify the size of an element is to apply width and height
-  dimensions to the entire visible box, including the padding and border.
-  Because this is not the default browser behavior, you need to explicitly set
-  box-sizing: border-box in the style sheet.
+dimensions to the entire visible box, including the padding and border.
+Because this is not the default browser behavior, you need to explicitly set
+box-sizing: border-box in the style sheet.<br>
+The other way to specify the size of an element is to apply width and height
+dimensions to the entire visible box, including the padding and border.
+Because this is not the default browser behavior, you need to explicitly set
+box-sizing: border-box in the style sheet.
   </p>
 
 
