--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
 <body>
 
 <div id="nav">   
-  <ul>
-    <li>about</li>
-    <li>blog</li>
-    <li>contact</li>
-  </ul>
+  <h1>cyberelic</h1>
   </div>
   
   <p>
