--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Smashing HTML5!</title>
+<title>cyberelic</title>
 
 <link rel="stylesheet" href="css/main.css" type="text/css" />
 
@@ -27,6 +27,7 @@
 dimensions to the entire visible box, including the padding and border.
 Because this is not the default browser behavior, you need to explicitly set
 box-sizing: border-box in the style sheet.<br>
+<br>
 The other way to specify the size of an element is to apply width and height
 dimensions to the entire visible box, including the padding and border.
 Because this is not the default browser behavior, you need to explicitly set
