--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
   </div>
   
  <div id="content">
-    The other way to specify the size of an element is to apply width and height
-dimensions to the entire visible box, including the padding and border.
-Because this is not the default browser behavior, you need to explicitly set
-box-sizing: border-box in the style sheet.<br>
+    here is my writeup for the Tryhackme.com room "anthem"<br>
 <br>
+Question #1 asks: <blockquote>what ports are open?</blockquote>
+    <br>
 The other way to specify the size of an element is to apply width and height
 dimensions to the entire visible box, including the padding and border.
 Because this is not the default browser behavior, you need to explicitly set
